# trade-up-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  API_RESPONSE_AUDIT.md  BUSINESS_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIG_MIGRATION_GUIDE.md  DASHBOARD_FIX_INSTRUCTIONS.md  DATABASE_FIXES_SUMMARY.md  DEAL_ARCHITECT_FIX.md  DEAL_ARCHITECT_ISSUES.md  DEAL_ARCHITECT_STATUS.md  Dockerfile.dev  ENGINEER_REVIEW_RESULTS.md  EVERYTHING_WORKS.md  EXCEL_FORMAT_FINAL_FIX.md  EXCEL_FORMAT_UPDATE.md  EXECUTION_GUIDE.md  FINAL_STATUS_REPORT.md  FIXES_SUMMARY.md  FRONTEND_API_AUDIT.md  FRONTEND_BACKEND_FIXES.md  GITHUB_CODESPACES_SETUP.md  INTEGRATION_GUIDE.md  PERFORMANCE_FIX_SUMMARY.md  PR_REVIEW_DEAL_ARCHITECT.md  README.md  REFACTORING_PHASE1_REPORT.md  SANITY_CHECK.md  SECURITY_AND_CODE_QUALITY_FIXES.md  SERVER_MODES.md  SYSTEM_ENHANCEMENTS.md  TWO_STAGE_FILTERING.md  VERIFY_EVERYTHING.py  VERIFY_UI_INTEGRATION.md  agent.md  agent_setup.sh  agent_setup_no_server.sh  (+52 more)
.github/codespaces/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
api/: __init__.py
app/: app_factory.py  constants.py  exceptions.py  main.py  models.py
app/api/: __init__.py  cache.py  circuit_breaker.py  config.py  customers.py  health.py  metrics.py  offers.py  routes.py  search.py
app/core/: data.py  error_handlers.py  startup.py  (+2 more)
config/: NEW_STRUCTURE.md  __init__.py  base_config.json  cache_config.py  config.py  configuration_manager.py  engine_config.json  facade.py  registry.py  schema.py  unified_config.py  validation.py
core/: __init__.py  cache_utils.py  calculator.py  config.py  config_manager.py  data_loader.py  data_loader_dev.py  engine.py  logger.py  risk_profiles.py  scenarios.py  schemas.py  settings.py  test_bdd_engine.py  test_complete_system.py  test_contract_api.py  test_gps_financing.py  test_npv.py  test_property_ranges.py
data/: __init__.py  cache_manager.py  circuit_breaker.py  circuit_breaker_factory.py  connection_pool.py  customers_data_tradeup.csv  customers_data_tradeup_original.csv  database.py  exceptions.py  filtered_inventory_query.sql  inventory_query.sql  inventory_query_limited.sql  loader.py  mock_data_loader.py  transaction_manager.py  updated_offer.sql
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  README.md  architecture.md  fee_configuration_review.md  fetch_sku_enrichment.md  new_features_explanation.md  performance_budgets.md  project-charter.md  range_optimization.md  scenario_metrics.md  smart_range_proposal.md
engine/: __init__.py  basic_matcher.py  basic_matcher_sync.py  calculator.py  decimal_config.py  financial_audit.py  financial_calculations.py  payment_utils.py  smart_search.py  type_utils.py
scripts/: fetch_inventory_by_stock_ids.py  migrate_audit_logs.py  organize_docs.sh  start_dev.sh
tests/: conftest.py  test_bdd_engine.py  test_complete_system.py  test_gps_financing.py  test_kavak_payment.py  test_middleware_order.py  test_property_algorithms.py  test_range_validation.py
tools/: profile_range_search.py  stress_test_smart_search.py
utils/: logging.py
(+113 files in other folders)
